# i3gw

./: .gitignore  LICENSE  PKGBUILD  README.md  configure  configure.ac
src/: Makefile.am  main.c
